feat: JavaFX 실행 확인